--- a/style.css
+++ b/style.css
@@ -152,4 +152,47 @@ h3 {
 @keyframes bloom {
     0% { transform: scale(0) rotate(-45deg); opacity: 0; }
     100% { transform: scale(1) rotate(-45deg); opacity: 1; }
+
+}
+
+/* --- PANTALLA DE INICIO --- */
+#overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #fdf0f0; /* Mismo color de fondo */
+    z-index: 9999; /* Por encima de todo */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: opacity 1s ease-out; /* Desvanecimiento suave */
+}
+
+.contenido-overlay {
+    text-align: center;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+#btn-comenzar {
+    background-color: #ff4d6d;
+    color: white;
+    border: none;
+    padding: 15px 30px;
+    font-size: 1.2rem;
+    border-radius: 50px;
+    cursor: pointer;
+    margin-top: 20px;
+    box-shadow: 0 4px 15px rgba(255, 77, 109, 0.4);
+    transition: transform 0.2s;
+}
+
+#btn-comenzar:hover {
+    transform: scale(1.05);
+}
+
+.oculto {
+    opacity: 0;
+    pointer-events: none; /* Para que ya no se pueda clickear */
 }
